fixed layout issues caused by [https://bbpcode.epfl.ch/code/18397]

--- a/app/styles/esv/gz3d-view.scss
+++ b/app/styles/esv/gz3d-view.scss
@@ -1,5 +1,3 @@
-@import "angular-hbp-common/dist/scss/hbp-common.scss";
-
 /* Experiment Simulation Viewer */
 /* Flexbox Layout to cover the complete browser window */
 html {
@@ -101,7 +99,7 @@ body > div {
   margin-left:auto;
   margin-right:auto;
   top: 1%;
-  bottom: $hbp-toolbar-height + 5px;
+  bottom: 47px; // we hardcode thevalue = toolbarheight (42px) + 5px until hbp-collaboratory-theme is made available
   background:rgba(150, 220, 150, 0.95);
   width: 80%;
   border-radius: 8px;
